# TDD

./: .gitignore  CMakeLists.txt  README.md
include/: Soundex.hpp  atm_machine.h  bank_server.h  bank_server_real.h  bank_server_stub.h
src/: Soundex.cpp  SoundexTest.cpp  TestSuite.cpp
